create login page

--- a/index.html
+++ b/index.html
@@ -4,12 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>100</title>
 </head>
 
 <body>
-    hello
+    <div class="login-container">
+        <div class="login-input-container">
+            <div class="login-input-box">
+                <span>ID: </span>
+                <input type="text" placeholder="처음 만난 날짜(xxxxxxxx)">
+            </div>
+            <div class="login-input-box">
+                <span>PW: </span>
+                <input type="text" placeholder="사귄 날짜(xxxxxxxx)">
+            </div>
+        </div>
+        <div class="login-button-container">
+            <button>LOGIN</button>
+        </div>
+    </div>
 </body>
 
 </html>
